# experiment-process-containers

./: .gitignore  Cargo.toml  README.md  notes.md
c_bindings/: Cargo.toml  README.md  build.rs
c_bindings/src/: common.h  custom_ls.c  error.c  error.h  lib.rs
cmd/: Cargo.toml
cmd/src/: exec.rs  lib.rs  read_input.rs
cpp_bindings/: Cargo.toml  README.md  build.rs
cpp_bindings/src/: lib.rs  nsjail_export.cpp
disk/: Cargo.toml  README.md  firecracker_overlay_init.md
disk/src/: btrfs.rs  lib.rs  overlay_fs.rs  utils.rs
doc/old/: RAII.md  conversion.md  error_handling.md  prelude_and_std.md  traits.md  var_created_inside_fn.md
doc/old/container/: articles.md  clone_vs_unshare.md  idea_revisit_nsjail.md
doc/old/container/firecracker jailer/: chroot.md
doc/old/container/network/: simulate.md
doc/old/container/nsjail_mapping/: clone.md  fil_d_ariane.md  launch_nsjail_with_ip.md  subprocNewProc.md  todo.md
doc/research/: seccomp.md
jail/: Cargo.toml  README.md
jail/benches/: my_benchmark.rs
jail/src/: caps.rs  cgroup.md  cgroupv1.rs  cgroupv2.rs  config.md  config.rs  contain.md  contain.rs  cpu.rs  error.rs  ipc.rs  lib.rs  main.rs  mnt.md  mnt.rs  net.md  net.rs  pid.md  pid.rs  pitfalls.md  protobuf.rs  rlimit.rs  sandbox.rs  subproc.md  subproc.rs  user.md  user.rs  utils.md  utils.rs  uts.rs  wait.rs
rootfs/: Cargo.toml  README.md
rootfs/doc/image_creation/: current_toastate_image_creation_process.md  image_sources.md  non_alpine_rootfs.md
rootfs/src/: creation.rs  test.sh
scheduler/: Cargo.toml  README.md
scheduler/archives/: deque_thread_pool.rs  nm_creator.rs  pool.rs  thread_pool.rs  thread_pool_scheduler.rs  wait.rs
scheduler/benches/: my_benchmark.rs
scheduler/src/: commands_images.rs.old  commands_toaster.rs  config.rs  gtvs_message.rs  hash_table.rs  init.rs  lib.rs  main.rs  net.rs  pool.rs  stateloop.rs  time_utils.rs  uni_loop_scheduler.md  waiter.rs
seccomp/: Cargo.toml  README.md
seccomp/src/: utils.rs
src/: main.rs  testainer.rs
sys_util/: Cargo.toml  README.md  btrfs_overlayfs_straces.md  build.rs  musl.md
sys_util/src/: epoll.rs  errno.rs  execv.rs  fcntl.rs  inspiration.md  ioctl.rs  lib.rs  main.rs  mount.rs  num_cpu.rs  sched.rs  signal.rs  socket.md  socket.rs  stat.rs  statfs.rs  statvfs.rs  syscall.rs  uio.rs  unistd.rs  uts.rs
sys_util/src/bindings/: mod.rs
sys_util/src/include/: bindings.h
sys_util/src/libnl/: README.md  link.rs  mod.rs  socket.rs
utils/: Cargo.toml
utils/src/: filepath.rs  lib.rs  macros.rs
