[package]
name = "cpp_bindings"
version = "0.1.0"
authors = ["Arthur <arthur.weinmann@toastate.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.69"

[build-dependencies]
cc = "1.0"
