[package]
name = "disk"
version = "0.1.0"
authors = ["Arthur <arthur.weinmann@toastate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.69"
walkdir = "2"

cmd = { path = "../cmd" }
sys_util = { path = "../sys_util" }
jail = { path = "../jail" }
