[package]
name = "jail"
version = "0.1.0"
authors = ["Arthur <arthur.weinmann@toastate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.69"
sys_util = { path = "../sys_util"}
utils = { path = "../utils"}
cpp_bindings = { path = "../cpp_bindings" }
c_bindings = { path = "../c_bindings" }
seccomp = { path = "../seccomp" }
cmd = { path = "../cmd" }
clap = ">=2.33.0"

[dev-dependencies]
criterion = ">=0.2"
regex = "1"

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
crate-type = ["lib", "staticlib", "dylib"]

[[bin]]
name = "nsjail"
path = "src/main.rs"
