[package]
name = "rootfs"
version = "0.1.0"
authors = ["Arthur <arthur.weinmann@toastate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.69"

jail = { path = "../jail"}
sys_util = { path = "../sys_util"}
cmd = { path = "../cmd"}
