[package]
name = "scheduler"
version = "0.1.0"
authors = ["ubuntu <arthur.weinmann@toastate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.69"
# crossbeam = ">=0.7.3"
crossbeam-channel = ">=0.4.0"
crossbeam-queue = ">=0.2"
crossbeam-deque= ">=0.7.2"
evmap = ">=7.1.2"


jail = { path = "../jail"}
sys_util = { path = "../sys_util" }
cmd = { path = "../cmd" }
disk = { path = "../disk" }
seccomp = { path = "../seccomp" }

[dev-dependencies]
criterion = ">=0.2"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "schedulerCLI"
path = "src/main.rs"
