[package]
name = "sys_util"
version = "0.1.0"
authors = ["Arthur <arthur.weinmann@toastate.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version =">=0.2.69", features = [ "extra_traits" ]} # features = [ "extra_traits" ] to have Debug, Eq etc implemented for libc types
bitflags = ">=1.2.1"

cpp_bindings = { path = "../cpp_bindings" }

[build-dependencies]
bindgen = ">=0.53"
cc = ">=1.0"

[[bin]]
name = "genBindings"
path = "src/main.rs"